--- a/ui/_navigation.scss
+++ b/ui/_navigation.scss
@@ -62,4 +62,11 @@ THE SOFTWARE.
 			color: #FFF;
 		}
 	}
+	
+	&.vertical {
+		.navigation-item {
+			display: block;
+			width: 100%;
+		}
+	}
 }
