--- a/ui/_sidebar.scss
+++ b/ui/_sidebar.scss
@@ -30,7 +30,7 @@ body {
 	}
 	
 	.menu-entry {
-		font-size: .8em;
+		font-size: .8rem;
 		color: #666;
 		display: block;
 		
